--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
+:root {
+  --green: #80cbc4; /*teal-200*/
+  --purple: #673ab7; /*deepPurple-500*/
+  --beige: #ffecb3; /*amber-100*/
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app {
+  background-color: var(--green);
+  position: relative;
+  min-height: 100vh;
+}
+
+.banner {
+  height: 75vh;
+  background: url(./images/pexels-pixabay-262978.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 2em;
+  color: white;
+  text-shadow: 0px 0px 4px #000000;
+  display: flex;
+  align-items: flex-end;
+  border-radius: 10px;
+}
+
+.banner h1 {
+  font-size: 54px;
+  margin: 0px;
+  line-height: 1;
+}
+
+.home-data {
+  margin-top: 20px;
+}
+
+.blog-posts-container {
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px,1fr));
+  row-gap: 10px;
+  column-gap: 10px;
 }
