--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,9 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(350px,1fr));
   row-gap: 10px;
   column-gap: 10px;
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .grid-container.alt {
@@ -91,6 +94,9 @@ body {
 .book-card .book-card-image {
   position: relative;
   width: 100%;
+}
+.book-card .book-card-image img {
+  max-height: 350px;
 }
 
 .book-card .book-card-image .absolute-description {
@@ -157,14 +163,24 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   margin: 20px 0;
 }
 
 .form-group {
   margin-bottom: 20px;
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  flex-direction: column;
 }
-.form-group .MuiTextField-root + .MuiTextField-root {
-  margin-left: 10px;
+.form-group .MuiTextField-root + .MuiTextField-root,
+.form-group .MuiTextField-root + .MuiFormControl-root,
+.form-group .MuiFormControl-root + .MuiTextField-root {
+  margin-top: 10px;
+}
+.form-group .MuiTextField-root + button {
+  margin-top: 10px;
 }
 .form-horizontal button + button {
   margin-left: 10px;
@@ -190,4 +206,29 @@ body {
   padding: 10px;
   background: rgba(0,0,0,0.7);
   color: white;
+}
+
+
+
+
+
+@media (min-width: 760px) {
+  .form-horizontal {
+    justify-content: flex-start;
+  }
+
+  .form-group {
+    flex-direction: row;
+  }
+  .form-group .MuiTextField-root + .MuiTextField-root,
+  .form-group .MuiTextField-root + .MuiFormControl-root,
+  .form-group .MuiFormControl-root + .MuiTextField-root {
+    margin-top: 0px;
+    margin-left: 10px;
+  }
+  .form-group .MuiTextField-root + div.button-container {
+    margin-top: 0px;
+    margin-left: 10px;
+  }
+  
 }
